--- a/yumshare-client/src/app/pages/my-favourite-recipe/my-favourite-recipe.component.html
+++ b/yumshare-client/src/app/pages/my-favourite-recipe/my-favourite-recipe.component.html
@@ -1,7 +1,8 @@
 <div class="content-container">
   <div class="my-recipe-header">
     <h1>My Favourite Recipes</h1>
-    <p>Here, you can manage all your favourite recipes. Feel free to click on any recipe to view or remove it from your favourites. Enjoy exploring and saving your best-loved dishes!</p>
+    <p>Here, you can manage all your favourite recipes. Feel free to click on any recipe to view or remove it from your
+      favourites. Enjoy exploring and saving your best-loved dishes!</p>
   </div>
 
   <div class="sort-and-category">
@@ -61,49 +62,46 @@
 
   <div class="container">
     @for (recipe of displayedRecipes; track recipe) {
-      <div class="recipe-card">
-        <!-- Bên trái: ảnh món ăn -->
-        <div class="recipe-image">
-          <img src="" alt="Recipe Image">
-        </div>
+    <div class="recipe-card">
+      <!-- Bên trái: ảnh món ăn -->
+      <div class="recipe-image">
+        <img src="" alt="Recipe Image">
+      </div>
 
-        <!-- Bên phải: nội dung -->
-        <div class="recipe-content">
-          <!-- Trên: tiêu đề + tác giả -->
-          <div class="recipe-header">
-            <div class="name-and-author">
-              <h3 class="recipe-title">{{ recipe.name }}</h3>
-              <p class="recipe-author">by {{ recipe.author }}</p>
-            </div>
-            <div class="example-button-row">
-              <div class="example-flex-container">
-                <button mat-icon-button
-                        class="favourite-btn"
-                        (click)="toggleFavourite(recipe)">
-                  <mat-icon
-                    [ngClass]="{
+      <!-- Bên phải: nội dung -->
+      <div class="recipe-content">
+        <!-- Trên: tiêu đề + tác giả -->
+        <div class="recipe-header">
+          <div class="name-and-author">
+            <h3 class="recipe-title">{{ recipe.name }}</h3>
+            <p class="recipe-author">by {{ recipe.author }}</p>
+          </div>
+          <div class="example-button-row">
+            <div class="example-flex-container">
+              <button mat-icon-button class="favourite-btn" (click)="toggleFavourite(recipe)">
+                <mat-icon [ngClass]="{
                       'filled': recipe.isFavourite,
                       'outlined': !recipe.isFavourite,
                       'heartbeat': recipe.heartbeat
                     }">
-                    {{ recipe.isFavourite ? 'favorite' : 'favorite_border' }}
-                  </mat-icon>
-                </button>
-              </div>
+                  {{ recipe.isFavourite ? 'favorite' : 'favorite_border' }}
+                </mat-icon>
+              </button>
             </div>
           </div>
+        </div>
 
-          <!-- Giữa: mô tả -->
-          <div class="recipe-description">
-            <p>{{ recipe.description }}</p>
-          </div>
+        <!-- Giữa: mô tả -->
+        <div class="recipe-description">
+          <p>{{ recipe.description }}</p>
+        </div>
 
-          <!-- Dưới: ngày đăng -->
-          <div class="recipe-footer">
-            <span class="recipe-date">{{ recipe.date }}</span>
-          </div>
+        <!-- Dưới: ngày đăng -->
+        <div class="recipe-footer">
+          <span class="recipe-date">{{ recipe.date }}</span>
         </div>
       </div>
+    </div>
     }
   </div>
 
@@ -111,26 +109,30 @@
     <div class="example-button-row">
       <div class="example-flex-container">
         <div class="example-button-container">
-          <button mat-mini-fab aria-label="First page" (click)="goToFirst()" [disabled]="pageIndex === 0">&lt;&lt;</button>
-          <button mat-mini-fab aria-label="Previous page" (click)="goToPrev()" [disabled]="pageIndex === 0">&lt;</button>
-          <ng-container *ngIf="pageNumbers[0] > 0">
-            <button mat-mini-fab (click)="goToPage(0)">1</button>
-            <span *ngIf="pageNumbers[0] > 1">...</span>
-          </ng-container>
-          @for (page of pageNumbers; track page) {
-            <button
-              mat-mini-fab
-              [class.active]="page === pageIndex"
-              (click)="goToPage(page)">
-              {{ page + 1 }}
-            </button>
+          <button mat-mini-fab aria-label="First page" (click)="goToFirst()"
+            [disabled]="pageIndex === 0">&lt;&lt;</button>
+          <button mat-mini-fab aria-label="Previous page" (click)="goToPrev()"
+            [disabled]="pageIndex === 0">&lt;</button>
+          @if (pageNumbers[0] > 0) {
+          <button mat-mini-fab (click)="goToPage(0)">1</button>
+          @if (pageNumbers[0] > 1) {
+          <span>...</span>
           }
-          <ng-container *ngIf="pageNumbers[pageNumbers.length - 1] < totalPages - 1">
-            <span *ngIf="pageNumbers[pageNumbers.length - 1] < totalPages - 2">...</span>
+          }
+          @for (page of pageNumbers; track page) {
+          <button mat-mini-fab [class.active]="page === pageIndex" (click)="goToPage(page)">
+            {{ page + 1 }}
+          </button>
+          }
+          @if (pageNumbers[pageNumbers.length - 1] < totalPages - 1) { @if (pageNumbers[pageNumbers.length - 1] <
+            totalPages - 2) { <span>...</span>
+            }
             <button mat-mini-fab (click)="goToPage(totalPages - 1)">{{ totalPages }}</button>
-          </ng-container>
-          <button mat-mini-fab aria-label="Next page" (click)="goToNext()" [disabled]="pageIndex === totalPages - 1">&gt;</button>
-          <button mat-mini-fab aria-label="Last page" (click)="goToLast()" [disabled]="pageIndex === totalPages - 1">&gt;&gt;</button>
+            }
+            <button mat-mini-fab aria-label="Next page" (click)="goToNext()"
+              [disabled]="pageIndex === totalPages - 1">&gt;</button>
+            <button mat-mini-fab aria-label="Last page" (click)="goToLast()"
+              [disabled]="pageIndex === totalPages - 1">&gt;&gt;</button>
         </div>
       </div>
     </div>
