--- a/yumshare-client/src/app/pages/my-recipe/my-recipe.component.html
+++ b/yumshare-client/src/app/pages/my-recipe/my-recipe.component.html
@@ -1,7 +1,9 @@
 <div class="content-container">
   <div class="my-recipe-header">
     <h1>My Recipes</h1>
-    <p>Here, you can manage all the recipes you've posted. Feel free to click on any recipe to edit or delete it. You can also view comments and feedback from others. Don’t forget to keep your recipes updated and share your culinary adventures with the community!</p>
+    <p>Here, you can manage all the recipes you've posted. Feel free to click on any recipe to edit or delete it. You
+      can also view comments and feedback from others. Don’t forget to keep your recipes updated and share your culinary
+      adventures with the community!</p>
   </div>
 
   <div class="sort-and-category">
@@ -62,42 +64,42 @@
 
   <div class="container">
     @for (recipe of displayedRecipes; track recipe) {
-      <div class="recipe-card">
-        <div class="recipe-image">
-          <img src="" alt="Recipe Image">
-        </div>
-        <div class="recipe-content">
-          <div class="recipe-header">
-            <div class="name-and-author">
-              <h3 class="recipe-title">{{ recipe.name }}</h3>
-              <p class="recipe-author">by {{ recipe.author }}</p>
-            </div>
-            <div class="example-button-row">
-              <div class="example-flex-container">
-                <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="More actions">
-                  <mat-icon>more_vert</mat-icon>
+    <div class="recipe-card">
+      <div class="recipe-image">
+        <img src="" alt="Recipe Image">
+      </div>
+      <div class="recipe-content">
+        <div class="recipe-header">
+          <div class="name-and-author">
+            <h3 class="recipe-title">{{ recipe.name }}</h3>
+            <p class="recipe-author">by {{ recipe.author }}</p>
+          </div>
+          <div class="example-button-row">
+            <div class="example-flex-container">
+              <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="More actions">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="onEditRecipe(recipe)">
+                  <mat-icon>edit</mat-icon>
+                  <span>Edit</span>
                 </button>
-                <mat-menu #menu="matMenu">
-                  <button mat-menu-item (click)="onEditRecipe(recipe)">
-                    <mat-icon>edit</mat-icon>
-                    <span>Edit</span>
-                  </button>
-                  <button mat-menu-item class="delete-menu-item" (click)="onDeleteRecipe(recipe)">
-                    <mat-icon class="delete-icon">delete</mat-icon>
-                    <span class="delete-text">Delete</span>
-                  </button>
-                </mat-menu>
-              </div>
+                <button mat-menu-item class="delete-menu-item" (click)="onDeleteRecipe(recipe)">
+                  <mat-icon class="delete-icon">delete</mat-icon>
+                  <span class="delete-text">Delete</span>
+                </button>
+              </mat-menu>
             </div>
           </div>
-          <div class="recipe-description">
-            <p>{{ recipe.description }}</p>
-          </div>
-          <div class="recipe-footer">
-            <span class="recipe-date">{{ recipe.date }}</span>
-          </div>
+        </div>
+        <div class="recipe-description">
+          <p>{{ recipe.description }}</p>
+        </div>
+        <div class="recipe-footer">
+          <span class="recipe-date">{{ recipe.date }}</span>
         </div>
       </div>
+    </div>
     }
   </div>
 
@@ -105,26 +107,30 @@
     <div class="example-button-row">
       <div class="example-flex-container">
         <div class="example-button-container">
-          <button mat-mini-fab aria-label="First page" (click)="goToFirst()" [disabled]="pageIndex === 0">&lt;&lt;</button>
-          <button mat-mini-fab aria-label="Previous page" (click)="goToPrev()" [disabled]="pageIndex === 0">&lt;</button>
-          <ng-container *ngIf="pageNumbers[0] > 0">
-            <button mat-mini-fab (click)="goToPage(0)">1</button>
-            <span *ngIf="pageNumbers[0] > 1">...</span>
-          </ng-container>
-          @for (page of pageNumbers; track page) {
-            <button
-              mat-mini-fab
-              [class.active]="page === pageIndex"
-              (click)="goToPage(page)">
-              {{ page + 1 }}
-            </button>
+          <button mat-mini-fab aria-label="First page" (click)="goToFirst()"
+            [disabled]="pageIndex === 0">&lt;&lt;</button>
+          <button mat-mini-fab aria-label="Previous page" (click)="goToPrev()"
+            [disabled]="pageIndex === 0">&lt;</button>
+          @if (pageNumbers[0] > 0) {
+          <button mat-mini-fab (click)="goToPage(0)">1</button>
+          @if (pageNumbers[0] > 1) {
+          <span>...</span>
           }
-          <ng-container *ngIf="pageNumbers[pageNumbers.length - 1] < totalPages - 1">
-            <span *ngIf="pageNumbers[pageNumbers.length - 1] < totalPages - 2">...</span>
+          }
+          @for (page of pageNumbers; track page) {
+          <button mat-mini-fab [class.active]="page === pageIndex" (click)="goToPage(page)">
+            {{ page + 1 }}
+          </button>
+          }
+          @if (pageNumbers[pageNumbers.length - 1] < totalPages - 1) { @if (pageNumbers[pageNumbers.length - 1] <
+            totalPages - 2) { <span>...</span>
+            }
             <button mat-mini-fab (click)="goToPage(totalPages - 1)">{{ totalPages }}</button>
-          </ng-container>
-          <button mat-mini-fab aria-label="Next page" (click)="goToNext()" [disabled]="pageIndex === totalPages - 1">&gt;</button>
-          <button mat-mini-fab aria-label="Last page" (click)="goToLast()" [disabled]="pageIndex === totalPages - 1">&gt;&gt;</button>
+            }
+            <button mat-mini-fab aria-label="Next page" (click)="goToNext()"
+              [disabled]="pageIndex === totalPages - 1">&gt;</button>
+            <button mat-mini-fab aria-label="Last page" (click)="goToLast()"
+              [disabled]="pageIndex === totalPages - 1">&gt;&gt;</button>
         </div>
       </div>
     </div>
