--- a/yumshare-client/src/app/pages/my-recipe/my-recipe.component.scss
+++ b/yumshare-client/src/app/pages/my-recipe/my-recipe.component.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   gap: 16px;
   border-bottom: 1px solid #e0e0e0;
-  background: white;
+  background: #F8FCF3;
 }
 
 .pages-navigation button {
