--- a/yumshare-client/src/app/pages/recipe-detail/recipe-detail.component.scss
+++ b/yumshare-client/src/app/pages/recipe-detail/recipe-detail.component.scss
@@ -24,7 +24,7 @@ p {
 
 .food-name {
   width: 100%;
-  height: 20%;
+  height: 5rem;
   background-color: #88C533;
   display: flex;
   justify-content: center;
@@ -110,6 +110,9 @@ p {
 }
 :host ::ng-deep .mat-mdc-standard-chip .mdc-evolution-chip__action--primary{
   border: transparent !important;
+}
+:host ::ng-deep.mdc-button__label{
+  color: black !important;
 }
 
 .middle {
@@ -286,6 +289,7 @@ p {
   align-items: center;
   justify-content: space-between;
   margin-top: 2rem;
+
 }
 
 .video {
@@ -304,6 +308,14 @@ p {
   border-radius: 1rem;
   display: flex;
   margin: 0 auto;
+}
+.bottom-under{
+  width: 80%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /* ==================== Laptop / Tablet ngang (992px – 1199px) ==================== */
@@ -355,6 +367,12 @@ p {
     align-items: flex-start;
     margin:0;
   }
+  .bottom-under{
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+  }
 }
 
 /* Tablet landscape (≥768px) */
@@ -405,6 +423,17 @@ p {
     position: relative;
     right: 1rem;
   }
+  .bottom-under{
+    width: 100%;
+    height: auto;
+    display: flex;
+    word-break: break-word;
+    overflow-wrap: break-word;
+  }
+}
+app-comment{
+  width: 100%;
+  display: block;
 }
 
 /* Desktop (≥1200px) */
@@ -423,22 +452,29 @@ p {
   .middle {
     margin-top: 2rem;
   }
+  .title {
+    margin: 0;
+    font-size: 1.25rem;
+    font-weight: bold;
+    text-align: center;
+    padding: 0 0.5rem;
+  }
+
+  .serving {
+    margin: 0;
+    font-size: 0.75rem;
+    color: #666;
+    text-align: center;
+  }
+  .bottom-under{
+    width: 100%;
+    height: auto;
+    display: flex;
+  }
 }
 
-.title {
-  margin: 0;
-  font-size: 1.25rem;
-  font-weight: bold;
-  text-align: center;
-  padding: 0 0.5rem;
-}
 
-.serving {
-  margin: 0;
-  font-size: 0.75rem;
-  color: #666;
-  text-align: center;
-}
+
 
 /* ===== Mobile small (≤480px) ===== */
 @media (max-width: 767px) {
@@ -472,6 +508,8 @@ p {
   .food-name {
     font-size: 1.1rem;
     padding: 0.5rem;
+    height: 3rem;
+    width: 100%;
   }
   .title {
     font-size: 1.2rem !important;
@@ -508,7 +546,12 @@ p {
     flex-wrap: wrap;
     justify-content: center;
   }
+  .bottom-under{
+    width: 100%;
+    height: auto;
+  }
 }
+
 
 /* ===== Mobile small (≤320px) ===== */
 @media (max-width: 320px) {
@@ -634,6 +677,7 @@ p {
   .small {
     font-size: 0.7rem !important;
   }
+
 }
 @media (max-width: 287px) {
   .user-box{
