--- a/yumshare-client/src/app/pages/recipe-detail/component/comment/comment.component.scss
+++ b/yumshare-client/src/app/pages/recipe-detail/component/comment/comment.component.scss
@@ -3,9 +3,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  box-sizing: border-box;
-  margin-left: 1rem; /* 20px */
   align-items: flex-start;
+  padding-left: 1rem;
 }
 .comments-section p{
   font-size: 1rem;
@@ -69,13 +68,12 @@
   background: #f0f2f5;
   padding: 0.625rem 0.875rem;
   border-radius: 1.125rem;
-  max-width: 20rem;
   width: auto;
   word-break: break-word;
   overflow-wrap: break-word;
 }
 .comment-user{
-  max-width: 100%;
+  width: 100%;
 }
 
 .comments-section .user-name {
@@ -113,12 +111,9 @@
 }
 
 .comment-body {
-  max-width: 80%;
+  width: 80%;
 }
-.material-icons{
-  width: 0.7rem;
-  height: 0.7rem;
-}
+
 .comment-body input {
   width: 100%;
   padding: 0.5rem 1rem;
@@ -146,6 +141,11 @@
 }
 .comment-actions{
   padding-top: 0.4rem;
+
+  .material-icons{
+    font-size: 1rem;
+    color: rgb(0, 0, 0, 0.5)!important;
+  }
 }
 .comment-storage{
   width: 100%;
